<resources>
    <string name="app_name">Ropes App Design</string>
    <string name="action_settings">Settings</string>
    <string name="forward_left">Forward\nLeft</string>
    <string name="forward_right">Forward\nRight</string>
    <string name="back_left">Back\nLeft</string>
    <string name="back_right">Back\nRight</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="zeroed_timer">00:00</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="zeroed_score">0</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="reset">Reset</string>
    <string name="title_activity_akulaammillugu">Akulaammillugu</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_oqaatsuaasaarneq">Oqaatsuaasaarneq</string>
</resources>
