<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.greenlandropes.ropesappdesign.Akulaammillugu">

<LinearLayout
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:paddingBottom="8dp">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timer_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/textTimer"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/zeroed_timer"
            android:textColor="@android:color/black"
            android:textSize="42sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/score_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/zeroed_score"
            android:textColor="#000000"
            android:textSize="42sp" />
    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-light"
        android:onClick="reset"
        android:text="@string/reset"
        android:textSize="16sp" />
</LinearLayout>

<ImageView
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:src="@drawable/qajaasaarneq" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingTop="30dp">

    <ToggleButton
        android:id="@+id/forwardLeftButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@color/button_material_light"
        android:onClick="addForwardLeft"
        android:textOff="@string/forward_left"
        android:textOn="Done" />

    <ToggleButton
        android:id="@+id/forwardRightButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@color/button_material_light"
        android:onClick="addForwardRight"
        android:textOff="@string/forward_right"
        android:textOn="Done" />


</LinearLayout>

<LinearLayout
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ToggleButton
        android:id="@+id/backLeftButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@color/button_material_light"
        android:onClick="addBackLeft"
        android:textOff="@string/back_left"
        android:textOn="Done" />

    <ToggleButton
        android:id="@+id/backRightButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@color/button_material_light"
        android:onClick="addBackRight"
        android:textOff="@string/back_right"
        android:textOn="Done" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="20dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="#9E9E9E"
        android:onClick="backMove"
        android:text="@string/back" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:background="#9E9E9E"
        android:onClick="nextMove"
        android:text="@string/next" />


</LinearLayout>

</LinearLayout>
